--- a/postfix-filter.conf
+++ b/postfix-filter.conf
@@ -71,7 +71,7 @@ output {
   stdout { codec => rubydebug }
 
   elasticsearch {
-    hosts => ["http://192.168.1.145:9200"]
+    hosts => ["localhost:9200"]
     index => "postfix_%{+YYYY.MM}"
 #    user => admin
 #    password => admin
